feat(ui): implement UVG color scheme and enhance functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
 
+  <!-- WELCOME SCREEN -->
+  <div class="welcome-screen" id="welcomeScreen">
+    <img src="LOGO.png" alt="RigoCompra" class="welcome-logo">
+    <h1 class="welcome-text">Bienvenido a RigoCompra</h1>
+    <p class="welcome-subtext">Tu marketplace universitario UVG</p>
+  </div>
+
   <!-- SIDEBAR (izquierda) LOGO-->
   <aside class="sidebar">
     <a class="brand" href="index.html" aria-label="RigoCompra – inicio">
